# nimblend

./: .gitignore  .pre-commit-config.yaml  HANDOVER.md  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: init-environment.sh
.repoai/: .repoaiignore  custom_model_config.yaml  repoai_config.yaml  token_usage.yaml
benchmarks/: bench_comparison.py  bench_comprehensive.py  profile_hot_paths.py
benchmarks/results/: bench_20260110_030222.json  bench_latest.json
docs/: api.md  getting-started.md  index.md
examples/: basic_operations.py  examples.ipynb  get_items.py  icechunk_integration.py  lazy_computation.py  series_conversion.py  shrink_method.py  zarr_storage.py
rust/: Cargo.toml  README.md  pyproject.toml
rust/src/: lib.rs
src/nimblend/: __init__.py  _accel.py  core.py  operations.py
src/nimblend/io/: __init__.py  icechunk.py  series.py  zarr.py
tests/: test_broadcast.py  test_clip.py  test_coarsen.py  test_comparison.py  test_concat.py  test_cumulative.py  test_datetime.py  test_equals.py  test_getitem.py  test_isel.py  test_nan.py  test_reductions.py  test_sel.py  test_series.py  test_shape.py  test_shift_roll.py  test_transpose.py  test_utils.py  test_where.py  test_xarray_comparison.py
