[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nimblend"
version = "0.1.0"
description = "Efficient labeled N-dimensional arrays with flexible alignment"
readme = "README.md"
authors = [{name = "NimbleNd Contributors"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]
keywords = ["numpy", "array", "labeled", "alignment", "multidimensional", "dask"]
dependencies = [
    "numpy>=1.20.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
io = ["zarr>=2.14.0"]
dask = ["dask[array]>=2023.0.0"]
icechunk = ["icechunk>=0.1.0", "zarr>=2.14.0", "dask[array]>=2023.0.0"]
pandas = ["pandas>=1.0.0"]
polars = ["polars>=0.10.0"]
all = ["nimblend[io,dask,icechunk,pandas,polars]"]

[project.urls]
"Homepage" = "https://github.com/user/nimblend"
"Bug Tracker" = "https://github.com/user/nimblend/issues"

[tool.setuptools.packages.find]
where = ["src"]
