[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nimblend"
version = "0.1.0"
description = "Efficient labeled N-dimensional arrays with flexible alignment"
readme = "README.md"
authors = [{ name = "Carlos Gaete" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]
keywords = [
    "numpy",
    "array",
    "labeled",
    "alignment",
    "multidimensional",
    "dask",
]
dependencies = ["numpy>=2.2.4"]
requires-python = ">=3.11"

[project.optional-dependencies]
io = ["zarr>=3.0.4"]
dask = ["dask[array]>=2025.1.0"]
icechunk = ["icechunk>=0.2.12", "zarr>=3.0.4", "dask[array]>=2025.1.0"]
pandas = ["pandas>=2.0.0"]
polars = ["polars>=1.26.0"]
all = ["nimblend[io,dask,icechunk,pandas,polars]"]

[project.urls]
"Homepage" = "https://github.com/cdgaete/nimblend"
"Bug Tracker" = "https://github.com/cdgaete/nimblend/issues"

[tool.setuptools.packages.find]
where = ["src"]
