[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nimblend"
version = "0.1.0"
description = "Efficient labeled N-dimensional arrays with flexible alignment"
readme = "README.md"
authors = [{ name = "Carlos Gaete" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]
keywords = [
    "numpy",
    "array",
    "labeled",
    "alignment",
    "multidimensional",
]
dependencies = ["numpy>=2.2.4"]
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest>=7.0.0"]
dev = ["ruff>=0.1.0", "pytest>=7.0.0", "pre-commit>=3.0.0"]
benchmark = ["xarray>=2024.1.0"]

[project.urls]
"Homepage" = "https://github.com/cdgaete/nimblend"
"Bug Tracker" = "https://github.com/cdgaete/nimblend/issues"

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []
